--- a/Style.css
+++ b/Style.css
@@ -85,8 +85,7 @@ body{
   .profile img{
     margin-top: 10px;
     margin-left: 10px;
-    border-radius: 50%;
-    height: 50px;
+    
     
   }
   #Profile_Name{
@@ -121,105 +120,104 @@ body{
     float: 0.2;
     
   }
-  .post_Home,h3{
+  /* .post_Home,h3{
     font-size: 20px;
     margin-left: 10px;
     position: sticky;
     margin-top: 15px;
+   
 }
 .post_Home{
     height: 5%;
     cursor: pointer;
-}
-.Post_Button{
-   height: 69px;
-   align-items: center;
-   min-width: 300px;
-   cursor: pointer;
-   margin: 0;
-   border: none;
-   font-weight: bold;
-   font-size: 15px;
-   
-   
-}
-.Post_Button2{
-    height: 69px;
-    margin: 0;
-    align-items: center;
-    font-weight: 10px;
-    min-width: 300px;
-    cursor: pointer;
-    border: none;
-    font-weight: bold;
-   font-size: 15px;
-}
-.button{
     display: flex;
-    height: 70px;
-    border: none;
-    border-bottom: 1px solid rgb(225, 221, 221);
-    flex: 0.2;
-    align-items: center;
-    margin: 0;
-    position: sticky;
-}
-.Post_Button h2{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    font-weight: 10px;
-    font-size: 15px;
+    display: none;
     
-}
-.Post_Button.active{
-  border-bottom:4px solid blue;
-  border-radius: 2px;
-  color: black;
-}
-.Post_Button2 h2{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-    font-weight: 10px;
-    font-size: 15px;
-    color: #75755f;
-}
-.Post_Button:hover{
-    background-color:rgb(227, 230, 230)
     
+} */
+/* For Mobile view */
+.article_header{
+  display: flex;
+  justify-content: space-between; 
+  align-items: center;
+  /* border: 2px solid black; */
+  display: none;
   
 }
-.Post_Button2:hover{
-    background-color:rgb(227, 230, 230)
+.prof_pic{
+  border-radius: 100%;
+  height: 50px;
+  align-items: left;
+  margin-left: 5px;
+
+}
+.Article_Option{
+  margin-right: 5px;
+  
+}
+.Article_Footer{
+display: flex;
+justify-content: space-between;
+align-items: center;
+display: none; 
+}
+/* Mobile view End */
+.button {
+  display: flex;
+  border-bottom: 1px solid rgb(225, 221, 221);
+  /* border: 2px solid red; */
+  
 }
 
+.Post_Button button {
+  width: 18vw; 
+  height: 55px;
+  font-size: 15px;
+  font-weight: bold;
+  background-color: white;
+  border: none;
+  cursor: pointer;
   
-  /* tweet box */
-.tweetbox__input img {
-    border-radius: 50%;
-    height: 60px;
-  }
+}
+
+.Post_Button2 button {
+  width: 18vw;
+  height: 55px;
+  font-weight: bold;
+  font-size: 15px;
+  color: #75755f;
+  background-color: white;
+  border: none;
+  cursor: pointer;
+}
+.Post_Button button:hover{
+  background-color:rgb(227, 230, 230)
   
-  .tweet_Box {
+}
+.Post_Button2 button:hover{
+  background-color:rgb(227, 230, 230)
+} 
+.Article_option{
+     display: inline;
+     justify-content: center;
+     align-items: center;
+     margin-top:20px;
+     margin-left: 15px;
+     width: 10vw;
+}
+.tweet_Box {
     border-bottom: 1px solid rgb(225, 221, 221);
     flex: 0.2;
+    /* border: 2px solid black; */
+    height: 150px;
     
    }
-  
-  .tweetBox form {
-    display: flex;
-    /* flex-direction: row; */
-  }
-    
-  .tweetbox__input {
+.tweetbox__input {
     display: flex;
     padding: 20px;
   }
   
-  .tweetbox__input input {
+.tweetbox__input input {
     flex: 1;
     margin-left: 20px;
     font-size: 20px;
@@ -227,40 +225,35 @@ body{
     outline: none;
   }
   
-  
- .icons{
-    width: 60%;
+.icons{
+    width: 50%;
     height: 50%;
-    padding: 20px;
-    font-size: 20px;
+    padding: 8px; 
+    font-size: 15px;
     font-weight: 20px;
     color: #22aeb5;
-    margin-left: 60px;
+    margin-left: 75px;
     display: flex;
-    justify-content: space-between;
+    gap: 20px;
+    /* border: 2px solid red; */
 } 
+
 .fa-solid:hover{
   background-color: #e1edf8;
-  border-radius: 50px;
-  height: 40px;
-  width: 40px;
+  border-radius: 100%;
+  height: 25px;
+  width: 25px;
   cursor: pointer;
-  padding: 10px;
+ 
 }
 .fa-regular:hover{
   background-color: #e1edf8;
-  border-radius: 30px;
-  height: 40px;
-  width: 40px;
+  border-radius: 100%;
+  height: 25px;
+  width: 25px;
   cursor: pointer;
-  padding: 10px;
-}
-
-
-.tweet{
-    width: 20%;
-    
-}
+  
+} 
 .tweet_icons_button{
     display: flex;
     border-bottom: 1px solid rgb(225, 221, 221);
@@ -277,14 +270,14 @@ body{
     border-radius: 30px;
     width: 75px;
     height: 35px;
-    margin-top: 20px;
-    margin-left: 90px;
-    /* float: right; */
+    /* margin-top: 20px; */
+    margin-left: 140px;
+   
   }
   .feed_post{
     height: 600px;
     width: 598px;
-    background-color: #22aeb5;
+    
   }
   .feed_post img{
     height: 100%;
@@ -338,13 +331,57 @@ body{
 @media only screen and (min-width: 200px) and (max-width:500px){
   .sidebar-left{
     display: none;
-    border: 2px solid red;
+   
   }
   article{
     display: block;
+    /* height: 4vh; */
+    /* width: 9vw; */
 
+  }
+  .Article_option{
+    display: none;
+  }
+  .button{
+    min-width: 100vw;
+    
+  }
+  
+  .Post_Button,.Post_Button2{
+    width: 2.5vw;
+     display: block; 
+     
+  }
+  .post_Home,.tweet_Box,.Article_option{
+    display: none;
+  }
+  .article_header{
+    display: block; 
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+    min-width: 100vw;
+    /* position: absolute; */
+  }
+  .feed_post.twitter-tweet{
+    min-width: 100vw;
+    /* min-height: 10%; */
+    /* position:absolute; */
+  }
+  .Article_Footer{
+    /* display: block; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+    min-width: 100vw;
+    position:absolute;
+    /* bottom: 2%;
+    left: 0%; */
+    right: 0%;
+    
   }
   .sidebar-right{
     display: none;
   }
+ 
 }
